--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+
 spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.main.banner-mode=off
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
