--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+useSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 
 spring.datasource.username=test
@@ -8,3 +9,5 @@ spring.main.banner-mode=off
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+
+#spring.data.rest.default-page-size:500
