--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.main.banner-mode=off
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 #spring.data.rest.default-page-size:500
