--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/plagiat2
+
+spring.datasource.url=jdbc:mysql://localhost:3306/plagiat2?useSSL=false
 
 spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.main.banner-mode=off
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 #spring.data.rest.default-page-size:500
